--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -31,7 +31,7 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: $body-text-color;
+  color: #FFFFFF;
 }
 
 #skip-to-content {
@@ -184,9 +184,9 @@ a {
   }
   
   kbd {
-    background-color: #fafbfc;
+    background-color: #002147;
     border: 1px solid #c6cbd1;
-    border-bottom-color: #959da5;
+    border-bottom-color: #002147;
     border-radius: 3px;
     box-shadow: inset 0 -1px 0 #959da5;
     color: #444d56;
